test/spec/start.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/start.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/start.wast:2:25: function variable out of range (max 1)
  (module (func) (start 1))
                        ^
assert_invalid error:
  third_party/testsuite/start.wast:8:5: start function must not return anything
    (start $main)
    ^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/start.wast:15:5: start function must be nullary
    (start $main)
    ^^^^^^^^^^^^^
$action_1() => 
$action_3() => 
$action_1() => 
$action_3() => 
called host spectest.print(i32:1) => ()
called host spectest.print(i32:2) => ()
6/6 tests passed.
;;; STDOUT ;;)
